--- a/src/templates/user/remove.html
+++ b/src/templates/user/remove.html
@@ -105,6 +105,10 @@
 
     document.querySelector("#submit-form").addEventListener("submit", e => {
         e.preventDefault();
+
+        document.querySelector('#delete-btn').disabled = 1;
+        document.querySelector('#delete-btn').value = 'Deleting...'
+
         fetch("{{ url_for('bp_user.remove_users') }}", {
             "method": "POST",
             "headers": {
@@ -113,6 +117,9 @@
             "body": JSON.stringify({ "users": Array.from(document.querySelectorAll("#selected-items .table-body .table-row > :first-child")).map(x => x.innerHTML), "emails":  Array.from(document.querySelectorAll("#selected-items .table-body .table-row > :nth-child(4)")).map(x => x.innerHTML)})
         }).then(d => {
             if (d.status === 200) window.location = "{{ url_for('bp_user.show_users') }}";
+
+            document.querySelector('#delete-btn').disabled = 0;
+            document.querySelector('#delete-btn').value = 'Delete selected users'
         });
     })
 </script>
