--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -26,7 +26,7 @@
                 {% if session['user']['RoleID'] == 1 %}
                     <a class="link {{ 'active' if active == 'deliveries' }}" href="{{ url_for('bp_delivery.deliveries') }}">Deliveries</a>
                 {% endif %}
-                <a class="link {{ 'active' if active == 'requests' }}" href="{{ url_for('bp_request.requests') }}">{{ "My" if session['user']['RoleID'] == 2 else "Item"}} Requests</a>
+                <a class="link {{ 'active' if active == 'requests' }}" href="{{ url_for('bp_request.requests') }}">My Requests</a>
                 {% if session['user']['RoleID'] == 0 %}
                     <a class="link {{ 'active' if active == 'users' }}" href="{{ url_for('bp_user.show_users') }}">Users</a>
                 {% endif %}
