--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -28,6 +28,7 @@
                 {% endif %}
                 <a class="link {{ 'active' if active == 'requests' }}" href="{{ url_for('bp_request.requests') }}">My Requests</a>
                 {% if session['user']['RoleID'] == 0 %}
+                    <a class="link {{ 'active' if active == 'pendingRequests' }}" href="{{ url_for('bp_request.pendingRequests') }}">Pending Requests</a>
                     <a class="link {{ 'active' if active == 'users' }}" href="{{ url_for('bp_user.show_users') }}">Users</a>
                 {% endif %}
                 <a class="link {{ 'active' if active == 'settings' }}" href="{{ url_for('bp_user.change_account_settings') }}">Account settings</a>
