adjusted stylesheet and class of request-table for users

--- a/src/templates/requests/requests.html
+++ b/src/templates/requests/requests.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class="table-wrapper">
-    <div class="table-main request-table {{ 'cust' if session['user']['RoleID'] == 1 else '' }}">
+    <div class="table-main request-table user">
         <div class="table-header">
             <div class="table-row">
                 <div class="table-sortable">
