--- a/src/static/style_inventory.css
+++ b/src/static/style_inventory.css
@@ -248,7 +248,7 @@ main h1 {
 }
 
 .request-table.user .table-row {
-    grid-template-columns: 0.375fr 0.5fr 0.5fr 0.625fr 0.75fr 2fr 0.5fr 0.5fr 0.5fr;
+    grid-template-columns: 0.375fr 0.5fr 0.5fr 0.625fr 0.75fr 2fr 0.5fr 0.5fr 0.5fr 0.5fr;
 }
 
 .request-table.pending .table-row {
