--- a/src/templates/requests/requests.html
+++ b/src/templates/requests/requests.html
@@ -40,7 +40,7 @@
                 <div>Request Quantity</div>
                 <div>Available Quantity</div>
                 <div>Unit</div>
-                <div>Cancel?</div>
+                <div>Actions</div>
             </div>
         </div>
         <div class="table-body">
@@ -91,6 +91,13 @@
         document.querySelectorAll(".cancel-btn").forEach(x => x.addEventListener("click", () => {
             if (confirm("Are you sure you want to cancel this request?")) {
                 cancelRequest(x.parentNode.parentNode.firstChild.innerText); // Change input to get requestID if page layout is changed
+                window.location = encodeURI(`/requests`);
+            }
+        }));
+
+        document.querySelectorAll(".receive-btn").forEach(x => x.addEventListener("click", () => {
+            if (confirm("Are you sure you have received the item?")) {
+                receiveRequest(x.parentNode.parentNode.firstChild.innerText); // Change input to get requestID if page layout is changed
                 window.location = encodeURI(`/requests`);
             }
         }));
