--- a/src/templates/requests/approvedRequests.html
+++ b/src/templates/requests/approvedRequests.html
@@ -100,14 +100,16 @@
             requestQuantity = Number(x.parentElement.previousElementSibling.previousElementSibling.previousElementSibling.innerText);
             if (amount > requestQuantity) alert("Please enter amount equal or less than the requested amount.")
             else if (amount != 0) {
-                issueRequestItem(1, amount, x.parentNode.parentNode.firstChild.innerText, x.value); // Change third input value if page layout is changed
+                let reqDetails = x.value.split();
+                issueRequestItem(1, amount, reqDetails[0], reqDetails[1]); // Change third input value if page layout is changed
                 window.location = encodeURI(`/requests/approvedRequests`);
             }
         }));
 
         document.querySelectorAll(".not-available-btn").forEach(x => x.addEventListener("click", () => {
             if (confirm("Are you sure the item is unavailable?")) {
-                issueRequestItem(0, 0, x.parentNode.parentNode.firstChild.innerText, x.value); // Change third input value if page layout is changed
+                let reqDetails = x.value.split();
+                issueRequestItem(0, 0, reqDetails[0], reqDetails[1]); // Change third input value if page layout is changed
                 window.location = encodeURI(`/requests/approvedRequests`);
             }
         }));
