--- a/src/templates/requests/pendingRequests.html
+++ b/src/templates/requests/pendingRequests.html
@@ -96,14 +96,14 @@
 
         document.querySelectorAll(".approve-btn").forEach(x => x.addEventListener("click", () => {
             if (confirm("Are you sure you want to approve this request?")) {
-                decidePendingRequest(1, x.parentNode.parentNode.firstChild.innerText); // Change second parameter to get requestID if page layout is changed
-                window.location = encodeURI(`/requests/approvedRequests`);
+                decidePendingRequest(1, x.value);
+                window.location = encodeURI(`/requests/pendingRequests`);
             }
         }));
         document.querySelectorAll(".deny-btn").forEach(x => x.addEventListener("click", () => {
             if (confirm("Are you sure you want to deny this request?")) {
-                decidePendingRequest(0, x.parentNode.parentNode.firstChild.innerText) // Change second parameter to get requestID if page layout is changed
-                window.location = encodeURI(`/requests/approvedRequests`);
+                decidePendingRequest(0, x.value);
+                window.location = encodeURI(`/requests/pendingRequests`);
             }
         }));
     });
